@@ -10,6 +10,7 @@ CHANGES
 	* parse claimed/returned messages
 	* new column "Acceptance Status" (can be linked, not yet linked, claimed, returned)
 	* allow u/chaintip <currency_symbol><decimal> (exmaple: "u/chaintip $1")
+	* new menu item "mark_read (including claim/return messages)"
 
 1.0-beta5:
 
